# SpinBotv2

./: .env.example  .gitignore  GEMINI.md  main.py  package-lock.json  pyproject.toml  roadmap.md
src/api/: main.py  schemas.py
src/api/routers/: referrals.py  users.py  wheel.py
src/bot/: keyboards.py  main.py
src/bot/middlewares/: antiflood.py
src/db/: models.py  queries.py  seed.py  session.py
src/frontend/: index.html
tests/: conftest.py  test_api.py  test_bot.py  test_integration.py
